optimized login logic and fixed note align.

--- a/src/style.scss
+++ b/src/style.scss
@@ -952,7 +952,7 @@ i {
                 position: absolute;
                 top: 70px;
                 padding: 0 10px;
-                width: 560px;
+                width: 540px;
                 height: 25px;
                 font-size: 22px;
                 letter-spacing: 1px;
